--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.23</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>oradores</finalName>
