Add new images and update web configuration files

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,18 +1,11 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
-<web-app>
-  <display-name>Proyecto final codo a codo</display-name>
-  <!-- src\main\java\com\oradores\controller\OradorController.java -->
-
-  <servlet>
-    <servlet-name>OradorController</servlet-name>
-    <servlet-class>com.oradores.controller.OradorController</servlet-class>
-  </servlet>
-
-  <servlet-mapping>
-    <servlet-name>OradorController</servlet-name>
-    <url-pattern>/api/oradores</url-pattern>
-  </servlet-mapping>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
+   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
+   version="6.0">
+    <session-config>
+        <session-timeout>
+            30
+        </session-timeout>
+    </session-config>
 </web-app>
