Update project configuration and remove unused test class

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.demo</groupId>
-    <artifactId>diciembre17</artifactId>
+    <!-- package com.tpfinal.orador -->
+    <groupId>com.tpfinal</groupId>
+    <artifactId>orador</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>diciembre17-1.0-SNAPSHOT</name>
+    <name>tpfinal - java</name>
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
